plot the contour on the loss surface

--- a/exercise_02/남헌_exercise_02_b.ipynb
+++ b/exercise_02/남헌_exercise_02_b.ipynb
@@ -841,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Plot the loss surface (right) and the path of the gradient descent (2pt)"
+    "## 5. Plot the loss surface (right) and the path of the gradient descent (2pt)\n"
    ]
   },
   {
