--- a/exercise_05/assignment_05_b.ipynb
+++ b/exercise_05/assignment_05_b.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "CmDIRkN5Chqp"
    },
@@ -149,27 +149,27 @@
    "source": [
     "# sigmoid function\n",
     "def sigmoid(z):\n",
-    "    sigmoid_f =\n",
+    "    sigmoid_f = 1 / (1+np.exp(-z))\n",
     "    return sigmoid_f \n",
     "\n",
     "\n",
     "# predictive function definition\n",
     "def f_pred(X,w): \n",
-    "    p = \n",
+    "    p = sigmoid(X.dot(w))\n",
     "    return p\n",
     "\n",
     "\n",
     "# loss function definition\n",
     "def loss_logreg(y_pred,y): \n",
     "    n = len(y)\n",
-    "    loss = \n",
+    "    loss = (-y.T.dot(np.log(y_pred)) - (1-y.T).dot(np.log(1-y_pred))) / n\n",
     "    return loss\n",
     "\n",
     "\n",
     "# gradient function definition\n",
     "def grad_loss(y_pred,y,X):\n",
     "    n = len(y)\n",
-    "    grad = \n",
+    "    grad = (X.T.dot(y_pred-y) * 2) / n\n",
     "    return grad\n",
     "\n",
     "\n",
@@ -179,10 +179,10 @@
     "    L_iters = np.zeros([max_iter]) # record the loss values\n",
     "    w = w_init # initialization\n",
     "    for i in range(max_iter): # loop over the iterations\n",
-    "        y_pred =  # linear predicition function   \n",
-    "        grad_f =  # gradient of the loss  \n",
-    "        w =  # update rule of gradient descent  \n",
-    "        L_iters[i] =  # save the current loss value \n",
+    "        y_pred = f_pred(X, w) # linear predicition function   \n",
+    "        grad_f = grad_loss(y_pred, y, X) # gradient of the loss  \n",
+    "        w = w - tau * grad_f # update rule of gradient descent  \n",
+    "        L_iters[i] = loss_logreg(y_pred, y) # save the current loss value \n",
     "        \n",
     "    return w, L_iters"
    ]
