add test data plot

--- a/exercise_06/assignment_06.ipynb
+++ b/exercise_06/assignment_06.ipynb
@@ -130,6 +130,20 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(1,figsize=(10,10))\n",
+    "plt.scatter(x1_train[idx_class0_train], x2_train[idx_class0_train], s=50, c='r', marker='.', label='class=0') \n",
+    "plt.scatter(x1_train[idx_class1_train], x2_train[idx_class1_test], s=50, c='b', marker='.', label='class=1')\n",
+    "plt.title('Training data')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
