define centroid function

--- a/exercise_07/assignment_07.ipynb
+++ b/exercise_07/assignment_07.ipynb
@@ -159,24 +159,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "42.0"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -196,7 +178,7 @@
    "source": [
     "def compute_centroid(Z):\n",
     "\n",
-    "    center = #centroid of a set of points in P#\n",
+    "    center = np.mean(Z, axis=0)\n",
     "    \n",
     "    return center\n"
    ]
