--- a/exercise_07/assignment_07.ipynb
+++ b/exercise_07/assignment_07.ipynb
@@ -212,7 +212,9 @@
     "        n += len(clusters[idx])\n",
     "        for z in clusters[idx] :\n",
     "             ret += compute_distance(z, centroids[idx])\n",
-    "    return ret/n"
+    "    if n == 0 :\n",
+    "    ret /= n\n",
+    "    return ret"
    ]
   },
   {
