--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_09.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsqioBLq6RYZCrWQKOkHDO",
+      "authorship_tag": "ABX9TyNxXur0eYfbSwpx+nX/ZCej",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,22 @@
         "id": "gp7xYCUmuxiT"
       },
       "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "from torchvision import transforms, datasets"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HFjr2IGRwr7q"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     }
   ]
