--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -6,13 +6,14 @@
       "name": "assignment_09.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxXur0eYfbSwpx+nX/ZCej",
+      "authorship_tag": "ABX9TyOTmm0ACV26edcKNZUuW7/w",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -35,13 +36,27 @@
         "from torch import nn\n",
         "from torchvision import transforms, datasets"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HFjr2IGRwr7q"
+      },
+      "source": [
+        "transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.1307,),(0.3081,)),  # mean value = 0.1307, standard deviation value = 0.3081\n",
+        "])"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WgUDvOAQxDr3"
       },
       "source": [
         ""
