add optimizer function and define learning rate

--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_09.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTriMpp6bwcb1wv7B2Qx49",
+      "authorship_tag": "ABX9TyONN+voty7QuNtjIPkl4dIm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1245,6 +1245,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZUrvKNqTxvY4"
+      },
+      "source": [
+        "criterion = nn.NLLLoss()"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CrQrzaiEx8-q"
+      },
+      "source": [
+        "learning_rate_value = 0.001\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "classifier = classification().to(device)\n",
+        "optimizer = torch.optim.SGD(classifier.parameters(), lr=learning_rate_value)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6TJ4O-dIyKB4"
       },
       "source": [
         ""
