add train model

--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_09.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyONN+voty7QuNtjIPkl4dIm",
+      "authorship_tag": "ABX9TyNxHl+xMkkypg5bTy/w/tsv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1269,13 +1269,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6TJ4O-dIyKB4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6TJ4O-dIyKB4",
+        "outputId": "0695b6ec-519f-432d-a517-9a2430037e0f"
       },
       "source": [
-        ""
+        "epoch_num = 5\n",
+        "classifier.train()\n",
+        "losses = []\n",
+        "for epoch in range(epoch_num) :\n",
+        "    correct = 0\n",
+        "    for batch_idx, (data, target) in enumerate(training_loader):\n",
+        "        data, target = data.to(device), target.to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        output = classifier(data)\n",
+        "        loss = criterion(output, target)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        if batch_idx % 10000 == 0:\n",
+        "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+        "                epoch, batch_idx * len(data), len(training_loader.dataset),\n",
+        "                100. * batch_idx / len(training_loader), loss.item()))\n",
+        "    losses.append(loss.item())\n",
+        "    accuracies.append(correct)\n",
+        "    print(losses[-1])"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train Epoch: 0 [0/60000 (0%)]\tLoss: 1.695436\n",
+            "Train Epoch: 0 [10000/60000 (17%)]\tLoss: 0.241013\n",
+            "Train Epoch: 0 [20000/60000 (33%)]\tLoss: 0.257137\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
