add accuracy calculation

--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "assignment_09.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxHl+xMkkypg5bTy/w/tsv",
+      "authorship_tag": "ABX9TyOkjhMRRvYUzUzF6CYCHrLk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1273,12 +1274,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6TJ4O-dIyKB4",
-        "outputId": "0695b6ec-519f-432d-a517-9a2430037e0f"
+        "outputId": "7b7e6aed-c972-44f2-e557-6c68d396bbfb"
       },
       "source": [
         "epoch_num = 5\n",
         "classifier.train()\n",
         "losses = []\n",
+        "accuracies = []\n",
         "for epoch in range(epoch_num) :\n",
         "    correct = 0\n",
         "    for batch_idx, (data, target) in enumerate(training_loader):\n",
@@ -1288,6 +1290,8 @@
         "        loss = criterion(output, target)\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
+        "        pred = output.argmax(dim=1, keepdim=True)\n",
+        "        correct += pred.eq(target.view_as(pred)).sum().item()\n",
         "        if batch_idx % 10000 == 0:\n",
         "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
         "                epoch, batch_idx * len(data), len(training_loader.dataset),\n",
@@ -1301,13 +1305,24 @@
         {
           "output_type": "stream",
           "text": [
-            "Train Epoch: 0 [0/60000 (0%)]\tLoss: 1.695436\n",
-            "Train Epoch: 0 [10000/60000 (17%)]\tLoss: 0.241013\n",
-            "Train Epoch: 0 [20000/60000 (33%)]\tLoss: 0.257137\n"
+            "Train Epoch: 0 [0/60000 (0%)]\tLoss: 1.437610\n",
+            "Train Epoch: 0 [10000/60000 (17%)]\tLoss: 0.044012\n",
+            "Train Epoch: 0 [20000/60000 (33%)]\tLoss: 0.054257\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Va7eAcpB0ixe"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
