--- a/exercise_09/assignment_09.ipynb
+++ b/exercise_09/assignment_09.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOkjhMRRvYUzUzF6CYCHrLk",
+      "authorship_tag": "ABX9TyNtpZd+NoMBpgFirHDV/PnQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1274,22 +1274,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6TJ4O-dIyKB4",
-        "outputId": "7b7e6aed-c972-44f2-e557-6c68d396bbfb"
+        "outputId": "dbcb34b1-d2fe-49c0-cb02-3f2babb74eea"
       },
       "source": [
         "epoch_num = 5\n",
         "classifier.train()\n",
         "losses = []\n",
         "accuracies = []\n",
+        "mini_batch_size = 32\n",
         "for epoch in range(epoch_num) :\n",
         "    correct = 0\n",
         "    for batch_idx, (data, target) in enumerate(training_loader):\n",
         "        data, target = data.to(device), target.to(device)\n",
-        "        optimizer.zero_grad()\n",
+        "        if batch_idx % mini_batch_size == 0 :\n",
+        "            optimizer.zero_grad()\n",
         "        output = classifier(data)\n",
         "        loss = criterion(output, target)\n",
         "        loss.backward()\n",
-        "        optimizer.step()\n",
+        "        if batch_idx % mini_batch_size == mini_batch_size-1 :\n",
+        "            optimizer.step()\n",
         "        pred = output.argmax(dim=1, keepdim=True)\n",
         "        correct += pred.eq(target.view_as(pred)).sum().item()\n",
         "        if batch_idx % 10000 == 0:\n",
@@ -1298,16 +1301,16 @@
         "                100. * batch_idx / len(training_loader), loss.item()))\n",
         "    losses.append(loss.item())\n",
         "    accuracies.append(correct)\n",
-        "    print(losses[-1])"
+        "    print(losses[-1], accuracies[-1])"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train Epoch: 0 [0/60000 (0%)]\tLoss: 1.437610\n",
-            "Train Epoch: 0 [10000/60000 (17%)]\tLoss: 0.044012\n",
-            "Train Epoch: 0 [20000/60000 (33%)]\tLoss: 0.054257\n"
+            "Train Epoch: 0 [0/60000 (0%)]\tLoss: 1.054766\n",
+            "Train Epoch: 0 [10000/60000 (17%)]\tLoss: 0.013407\n",
+            "Train Epoch: 0 [20000/60000 (33%)]\tLoss: 0.025908\n"
           ],
           "name": "stdout"
         }
