--- a/exercise_10/assignment_10.ipynb
+++ b/exercise_10/assignment_10.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "assignment_10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsqioBLq6RYZCrWQKOkHDO",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMXpNdxZTX2xaJ+11eJIDhW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +29,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "eFlnw0njY-Z2"
+      },
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "from torchvision import transforms, datasets\n",
+        "from matplotlib import pyplot as plt\n",
+        "import numpy as np"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4o-wcNbbUcf"
+      },
+      "source": [
+        "transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.1307,),(0.3081,)),  # mean value = 0.1307, standard deviation value = 0.3081\n",
+        "])"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v8AuT_FfbYW7"
       },
       "source": [
         ""
