define loss func and optimzer etc..

--- a/exercise_10/assignment_10.ipynb
+++ b/exercise_10/assignment_10.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNSmiwZNIB6FxQgE4jlrWdb",
+      "authorship_tag": "ABX9TyOIQnn+QtgLfep1csVLIl4+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1237,6 +1237,68 @@
       "cell_type": "code",
       "metadata": {
         "id": "FMZvU1iDbvpD"
+      },
+      "source": [
+        "class classification(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(classification, self).__init__()\n",
+        "        \n",
+        "        # construct layers for a neural network\n",
+        "        self.classifier1 = nn.Sequential(\n",
+        "            nn.Linear(in_features=28*28, out_features=20*20),\n",
+        "            nn.Sigmoid(),\n",
+        "        ) \n",
+        "        self.classifier2 = nn.Sequential(\n",
+        "            nn.Linear(in_features=20*20, out_features=10*10),\n",
+        "            nn.Sigmoid(),\n",
+        "        ) \n",
+        "        self.classifier3 = nn.Sequential(\n",
+        "            nn.Linear(in_features=10*10, out_features=10),\n",
+        "            nn.LogSoftmax(dim=1),\n",
+        "        ) \n",
+        "        \n",
+        "        \n",
+        "    def forward(self, inputs):                 # [batchSize, 1, 28, 28]\n",
+        "        x = inputs.view(inputs.size(0), -1)    # [batchSize, 28*28]\n",
+        "        x = self.classifier1(x)                # [batchSize, 20*20]\n",
+        "        x = self.classifier2(x)                # [batchSize, 10*10]\n",
+        "        out = self.classifier3(x)              # [batchSize, 10]\n",
+        "        \n",
+        "        return out\n"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ppBNwEV6cpE6"
+      },
+      "source": [
+        "criterion = nn.NLLLoss()"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DChy4rNcczBe"
+      },
+      "source": [
+        "learning_rate_value = 0.01\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "classifier = classification().to(device)\n",
+        "optimizer = torch.optim.SGD(classifier.parameters(), lr=learning_rate_value, momentum=0.9)\n",
+        "#scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=3, gamma=0.9)"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JxbWrFsBc0hk"
       },
       "source": [
         ""
