--- a/exercise_10/assignment_10.ipynb
+++ b/exercise_10/assignment_10.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIQnn+QtgLfep1csVLIl4+",
+      "authorship_tag": "ABX9TyNDPuxKYHhVi2wcF6UTm5QJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1299,6 +1299,34 @@
       "cell_type": "code",
       "metadata": {
         "id": "JxbWrFsBc0hk"
+      },
+      "source": [
+        "test_losses = []\n",
+        "test_accuracies = []\n",
+        "def test() :\n",
+        "    classifier.eval()\n",
+        "    correct = 0\n",
+        "    n = 0\n",
+        "    with torch.no_grad():\n",
+        "        for batch_idx, (data, target) in enumerate(testing_loader):\n",
+        "            data, target = data.to(device), target.to(device)\n",
+        "            output = classifier(data)\n",
+        "            loss = criterion(output, target)\n",
+        "            pred = output.argmax(dim=1, keepdim=True)\n",
+        "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+        "            n += len(data)\n",
+        "        print('Test Loss: {:.6f} Correct: {}, ACC : {}'.format(\n",
+        "            loss.item(), correct, correct/n))\n",
+        "        test_losses.append(loss.item())\n",
+        "        test_accuracies.append(correct/n)"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uPx5vcFsdKQ8"
       },
       "source": [
         ""
