define train func

--- a/exercise_10/assignment_10.ipynb
+++ b/exercise_10/assignment_10.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDPuxKYHhVi2wcF6UTm5QJ",
+      "authorship_tag": "ABX9TyP4DC+19zYdI6unkiYvq2qH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1246,11 +1246,11 @@
         "        # construct layers for a neural network\n",
         "        self.classifier1 = nn.Sequential(\n",
         "            nn.Linear(in_features=28*28, out_features=20*20),\n",
-        "            nn.Sigmoid(),\n",
+        "            nn.ReLU(),\n",
         "        ) \n",
         "        self.classifier2 = nn.Sequential(\n",
         "            nn.Linear(in_features=20*20, out_features=10*10),\n",
-        "            nn.Sigmoid(),\n",
+        "            nn.ReLU(),\n",
         "        ) \n",
         "        self.classifier3 = nn.Sequential(\n",
         "            nn.Linear(in_features=10*10, out_features=10),\n",
@@ -1266,7 +1266,7 @@
         "        \n",
         "        return out\n"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1277,7 +1277,7 @@
       "source": [
         "criterion = nn.NLLLoss()"
       ],
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1292,7 +1292,7 @@
         "optimizer = torch.optim.SGD(classifier.parameters(), lr=learning_rate_value, momentum=0.9)\n",
         "#scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=3, gamma=0.9)"
       ],
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1320,13 +1320,123 @@
         "        test_losses.append(loss.item())\n",
         "        test_accuracies.append(correct/n)"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uPx5vcFsdKQ8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uPx5vcFsdKQ8",
+        "outputId": "19d95368-3376-4924-c2e4-f544bc50070e"
+      },
+      "source": [
+        "epoch_num = 30\n",
+        "losses = []\n",
+        "accuracies = []\n",
+        "for epoch in range(epoch_num) :\n",
+        "    correct = 0\n",
+        "    n = 0\n",
+        "    classifier.train()\n",
+        "    #scheduler.step()\n",
+        "    for batch_idx, (data, target) in enumerate(training_loader):\n",
+        "        data, target = data.to(device), target.to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        output = classifier(data)\n",
+        "        loss = criterion(output, target)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        pred = output.argmax(dim=1, keepdim=True)\n",
+        "        correct += pred.eq(target.view_as(pred)).sum().item()\n",
+        "        n += len(data)\n",
+        "    print('Train Epoch: {} Loss: {:.6f} Correct: {} ACC: {}'.format(\n",
+        "        epoch, loss.item(), correct, correct/n))\n",
+        "    test()\n",
+        "    losses.append(loss.item())\n",
+        "    accuracies.append(correct/n)\n",
+        "    #train  test    batch_size  loss    activ\n",
+        "    #94.7,  91.95   16          ce      sigmoid\n",
+        "    #?      93.7    64          ce      sigmoid\n",
+        "    #97     92.8    64          nll     sigmoid\n",
+        "    #100    94.9    16          nll     sigmoid\n",
+        "    #100    95.5    64          nll     relu"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train Epoch: 0 Loss: 0.127496 Correct: 7743 ACC: 0.7743\n",
+            "Test Loss: 0.144125 Correct: 51952, ACC : 0.8658666666666667\n",
+            "Train Epoch: 1 Loss: 0.072749 Correct: 9149 ACC: 0.9149\n",
+            "Test Loss: 0.070219 Correct: 54153, ACC : 0.90255\n",
+            "Train Epoch: 2 Loss: 0.113736 Correct: 9391 ACC: 0.9391\n",
+            "Test Loss: 0.037383 Correct: 55292, ACC : 0.9215333333333333\n",
+            "Train Epoch: 3 Loss: 0.020197 Correct: 9539 ACC: 0.9539\n",
+            "Test Loss: 0.022966 Correct: 55662, ACC : 0.9277\n",
+            "Train Epoch: 4 Loss: 0.008091 Correct: 9693 ACC: 0.9693\n",
+            "Test Loss: 0.020598 Correct: 56249, ACC : 0.9374833333333333\n",
+            "Train Epoch: 5 Loss: 0.011748 Correct: 9784 ACC: 0.9784\n",
+            "Test Loss: 0.018580 Correct: 56454, ACC : 0.9409\n",
+            "Train Epoch: 6 Loss: 0.002839 Correct: 9859 ACC: 0.9859\n",
+            "Test Loss: 0.016131 Correct: 56658, ACC : 0.9443\n",
+            "Train Epoch: 7 Loss: 0.002788 Correct: 9917 ACC: 0.9917\n",
+            "Test Loss: 0.012397 Correct: 56787, ACC : 0.94645\n",
+            "Train Epoch: 8 Loss: 0.001580 Correct: 9956 ACC: 0.9956\n",
+            "Test Loss: 0.008893 Correct: 56842, ACC : 0.9473666666666667\n",
+            "Train Epoch: 9 Loss: 0.000336 Correct: 9974 ACC: 0.9974\n",
+            "Test Loss: 0.005889 Correct: 57002, ACC : 0.9500333333333333\n",
+            "Train Epoch: 10 Loss: 0.000269 Correct: 9987 ACC: 0.9987\n",
+            "Test Loss: 0.004276 Correct: 57039, ACC : 0.95065\n",
+            "Train Epoch: 11 Loss: 0.000354 Correct: 9997 ACC: 0.9997\n",
+            "Test Loss: 0.003945 Correct: 57144, ACC : 0.9524\n",
+            "Train Epoch: 12 Loss: 0.000390 Correct: 9999 ACC: 0.9999\n",
+            "Test Loss: 0.003546 Correct: 57174, ACC : 0.9529\n",
+            "Train Epoch: 13 Loss: 0.000326 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.003558 Correct: 57187, ACC : 0.9531166666666666\n",
+            "Train Epoch: 14 Loss: 0.000305 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.003546 Correct: 57208, ACC : 0.9534666666666667\n",
+            "Train Epoch: 15 Loss: 0.000271 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.003411 Correct: 57225, ACC : 0.95375\n",
+            "Train Epoch: 16 Loss: 0.000232 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.003264 Correct: 57243, ACC : 0.95405\n",
+            "Train Epoch: 17 Loss: 0.000213 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.003127 Correct: 57257, ACC : 0.9542833333333334\n",
+            "Train Epoch: 18 Loss: 0.000189 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002969 Correct: 57271, ACC : 0.9545166666666667\n",
+            "Train Epoch: 19 Loss: 0.000171 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002835 Correct: 57273, ACC : 0.95455\n",
+            "Train Epoch: 20 Loss: 0.000154 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002690 Correct: 57274, ACC : 0.9545666666666667\n",
+            "Train Epoch: 21 Loss: 0.000139 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002574 Correct: 57276, ACC : 0.9546\n",
+            "Train Epoch: 22 Loss: 0.000129 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002448 Correct: 57277, ACC : 0.9546166666666667\n",
+            "Train Epoch: 23 Loss: 0.000119 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002340 Correct: 57280, ACC : 0.9546666666666667\n",
+            "Train Epoch: 24 Loss: 0.000113 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002248 Correct: 57287, ACC : 0.9547833333333333\n",
+            "Train Epoch: 25 Loss: 0.000105 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002165 Correct: 57292, ACC : 0.9548666666666666\n",
+            "Train Epoch: 26 Loss: 0.000100 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002088 Correct: 57291, ACC : 0.95485\n",
+            "Train Epoch: 27 Loss: 0.000094 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.002015 Correct: 57300, ACC : 0.955\n",
+            "Train Epoch: 28 Loss: 0.000090 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.001947 Correct: 57301, ACC : 0.9550166666666666\n",
+            "Train Epoch: 29 Loss: 0.000086 Correct: 10000 ACC: 1.0\n",
+            "Test Loss: 0.001891 Correct: 57315, ACC : 0.95525\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mUanf9aHfM1z"
       },
       "source": [
         ""
