print loss and accuarcy

--- a/exercise_10/assignment_10.ipynb
+++ b/exercise_10/assignment_10.ipynb
@@ -6,7 +6,7 @@
       "name": "assignment_10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMs0BaW/i7WjGfdJcKTw5Zx",
+      "authorship_tag": "ABX9TyOasm7tCXfPAWsa57dKlN3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
         "from torch import nn\n",
         "from torchvision import transforms, datasets\n",
         "from matplotlib import pyplot as plt\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas"
       ],
       "execution_count": 138,
       "outputs": []
@@ -218,17 +219,7 @@
         "        epoch, loss.item(), correct, correct/n))\n",
         "    test()\n",
         "    losses.append(loss.item())\n",
-        "    accuracies.append(correct/n)\n",
-        "    #train  test    batch_size  loss    activ\n",
-        "    #94.7,  91.95   16          ce      sigmoid\n",
-        "    #?      93.7    64          ce      sigmoid\n",
-        "    #97     92.8    64          nll     sigmoid\n",
-        "    #100    94.9    16          nll     sigmoid\n",
-        "    #100    95.5    64          nll     relu\n",
-        "    #99.9   95.9    64          nll     relu    dropout추가\n",
-        "    #99.9   95.9    8           nll     relu    dropout추가 <- 튐\n",
-        "    #99.9   95.9    16          nll     relu    dropout추가 lr 줄임\n",
-        "    #batch 변경"
+        "    accuracies.append(correct/n)"
       ],
       "execution_count": 146,
       "outputs": [
@@ -343,6 +334,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CYqfyFLvFU11"
+      },
+      "source": [
+        "loss = min(losses)\n",
+        "test_loss = min(test_losses)\n",
+        "acc = max(accuracies)\n",
+        "test_acc = max(test_accuracies)"
+      ],
+      "execution_count": 176,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 483
@@ -409,6 +414,163 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        },
+        "id": "PTFM3KlkBN_U",
+        "outputId": "2453ecd5-a7c7-4ea6-b778-9f1911982b61"
+      },
+      "source": [
+        "loss_df = pandas.DataFrame({'loss' : ['training','testing'], '':[loss,test_loss]})\n",
+        "loss_df = loss_df.set_index('loss')\n",
+        "loss_df"
+      ],
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>loss</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>training</th>\n",
+              "      <td>0.000020</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>testing</th>\n",
+              "      <td>0.000549</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                  \n",
+              "loss              \n",
+              "training  0.000020\n",
+              "testing   0.000549"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 180
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        },
+        "id": "aag-T51gE6Be",
+        "outputId": "f3cd6d31-4d26-4483-db72-9f41d8335f21"
+      },
+      "source": [
+        "acc_df = pandas.DataFrame({'accuracy' : ['training','testing'], '':[acc,test_acc]})\n",
+        "acc_df = acc_df.set_index('accuracy')\n",
+        "acc_df"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>accuracy</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>training</th>\n",
+              "      <td>0.99950</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>testing</th>\n",
+              "      <td>0.96125</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 \n",
+              "accuracy         \n",
+              "training  0.99950\n",
+              "testing   0.96125"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_sX99yQ7FEu7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
